created header component

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/build/design-system.css" />
   </head>
   <body>
-    <hs-button variant="error">Button</hs-button>
+    <belo-header size="1" align="left">This is my headding</belo-header>
   </body>
+  <style>
+    @import url('https://fonts.cdnfonts.com/css/circular-std');
+  </style>
 </html>
