--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <belo-header size="1" align="left">This is my headding</belo-header>
+    <belo-p align="center">this is a word ernenrnm jn3j</belo-p>
   </body>
   <style>
     @import url('https://fonts.cdnfonts.com/css/circular-std');
