--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,7 @@
   <body>
     <belo-header size="1" align="left">This is my headding</belo-header>
     <belo-p align="center">this is a word ernenrnm jn3j</belo-p>
+    <belo-input label="email" placeholder="exm@email.com" hint="true" hinttext="help" disabled="disabled"></belo-input>
+
   </body>
 </html>
