--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
     <belo-header size="1" align="left">This is my headding</belo-header>
     <belo-p align="center">this is a word ernenrnm jn3j</belo-p>
     <belo-input label="email" placeholder="exm@email.com" hint="true" hinttext="help" disabled="disabled"></belo-input>
-
+    <belo-text-area maxlength="500" placeholder="enter your text here" disabled="disabled"></belo-text-area>
   </body>
 </html>
