created Anchor component

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,6 @@
       </style>
   </head>
   <body>
-    <belo-header size="1" align="left">This is my headding</belo-header>
-    <belo-p align="center">this is a word ernenrnm jn3j</belo-p>
-    <belo-input label="email" placeholder="exm@email.com" hint="true" hinttext="help" disabled="disabled"></belo-input>
-    <belo-text-area maxlength="500" placeholder="enter your text here" disabled="disabled"></belo-text-area>
-    <belo-card image="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/iphone-card-40-iphone14pro-202209_FMT_WHH?wid=508&hei=472&fmt=p-jpg&qlt=95&.v=1663611329204" 
-    location="Madrid, Sapin"
-    details="Listing Details"
-    score="4.87"
-    price_per_night="20$"
-    total_price="200$"
-    ></belo-card>
+    <belo-link link="https://www.airbnb.es/">Anchor</belo-link>
   </body>
 </html>
