fxed belo-input component bugs 🪲

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       </style>
   </head>
   <body>
-    <belo-link link="https://www.airbnb.es/">Anchor</belo-link>
-  </body>
+    <belo-input label="Label" placeholder="Text" hint="false" hinttext="text" required="required">
+  </belo-input>  
+</body>
 </html>
