improvements on belo-input and storybook 📈

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       </style>
   </head>
   <body>
-    <belo-input label="Label" placeholder="Text" hint="false" hinttext="text" required="required">
+    <belo-input label="Label" placeholder="Text" hint="true" hinttext="text" required="required">
   </belo-input>  
 </body>
 </html>
