⭕️created belo-badge component

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,6 @@
       </style>
   </head>
   <body>
-    <belo-input label="Label" placeholder="Text" hint="true" hinttext="text" required="required">
-  </belo-input>  
-</body>
+    <belo-badge counter="99"></belo-badge>
+  </body>
 </html>
