started avatar component

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
       </style>
   </head>
   <body>
-    <belo-badge counter="99"></belo-badge>
+    <belo-avatar></belo-avatar>
   </body>
 </html>
