--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
       </style>
   </head>
   <body>
-    <belo-card header="Header" content="Content" footer="Footer Content" image="https://media.revistaad.es/photos/62c2be405044c23fff61d3ec/master/w_1600%2Cc_limit/The%2520Boot%2520-%2520New%2520Zealand.jpg"></belo-card>
+    <belo-list-item label="Label" description="item description"></belo-list-item>
   </body>
 </html>
