crered list item and list component

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
       </style>
   </head>
   <body>
-    <belo-list-item label="Label" description="item description"></belo-list-item>
+    <belo-list></belo-list>
   </body>
 </html>
